--- a/.env
+++ b/.env
@@ -37,8 +37,13 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 ###< symfony/mailer ###
-#MAILER_DSN=smtp://jihed.bouazizi@artovis.tn:%40Jihed123456789%2A%2A@mail.artovis.tn:465
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://jihed.bouazizi@esprit.tn:jvonjybrzdobvaei@default
+#MAILER_DSN=gmail://Trabelsieya99@gmail.com:ggwdxgvamoofrkqx@default
+MAILER_DSN=smtp://adidotravel@gmail.com:ybdqnpyhcetwzeql@smtp.gmail.com:587
 ###< symfony/google-mailer ###
+
+FCB_ID=352291290672085
+FCB_SECRET=b9777ee929feee6849744f0216dc2d50
+FCB_CALLBACK="http://localhost:8000/fcb-callback"
+
