--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
     "doctrine/doctrine-bundle": "^2.12",
     "doctrine/doctrine-migrations-bundle": "^3.3",
     "doctrine/orm": "^2.9",
+    "knplabs/knp-paginator-bundle": "^5.9",
+    "league/oauth2-facebook": "^2.2",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.27",
     "symfony/asset": "5.4.*",
@@ -26,6 +28,7 @@
     "symfony/http-client": "5.4.*",
     "symfony/intl": "5.4.*",
     "symfony/mailer": "5.4.*",
+    "symfony/messenger": "5.4.*",
     "symfony/mime": "5.4.*",
     "symfony/monolog-bundle": "^3.0",
     "symfony/notifier": "5.4.*",
