Rss Feed + mailing

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,4 +7,7 @@ app_news_show:
     path: /news/{id}
     controller: App\Controller\NewsController::show
     methods: ['GET']
-
+feed_feed:
+    path: /feed
+    controller: App\Controller\RssFeedController::index
+    methods: ['GET']
