--- a/.env
+++ b/.env
@@ -36,5 +36,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
-###< symfony/mailer ###
+
+ MAILER_DSN=smtp://adidotravel@gmail.com:ybdqnpyhcetwzeql@smtp.gmail.com:587
+ ###< symfony/mailer ###
