--- a/.env
+++ b/.env
@@ -39,11 +39,17 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/mailer ###
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-#MAILER_DSN=gmail://Trabelsieya99@gmail.com:ggwdxgvamoofrkqx@default
-MAILER_DSN=smtp://adidotravel@gmail.com:ybdqnpyhcetwzeql@smtp.gmail.com:587
+MAILER_DSN=gmail://Trabelsieya99@gmail.com:ggwdxgvamoofrkqx@default
+#MAILER_DSN=smtp://adidotravel@gmail.com:ybdqnpyhcetwzeql@smtp.gmail.com:587
 ###< symfony/google-mailer ###
 
 FCB_ID=352291290672085
 FCB_SECRET=b9777ee929feee6849744f0216dc2d50
 FCB_CALLBACK="http://localhost:8000/fcb-callback"
 
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
