--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,7 +27,7 @@ security:
         lifetime: 604800
         path: /
         always_remember_me: true
-
+      login_throttling: null
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
 
