--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "league/oauth2-facebook": "^2.2",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.27",
+    "symfony/apache-pack": "^1.0",
     "symfony/asset": "5.4.*",
     "symfony/console": "5.4.*",
     "symfony/doctrine-messenger": "5.4.*",
@@ -35,6 +36,7 @@
     "symfony/process": "5.4.*",
     "symfony/property-access": "5.4.*",
     "symfony/property-info": "5.4.*",
+    "symfony/rate-limiter": "5.4.*",
     "symfony/runtime": "5.4.*",
     "symfony/security-bundle": "5.4.*",
     "symfony/serializer": "5.4.*",
